--- a/Views/Drivers/Details.cshtml
+++ b/Views/Drivers/Details.cshtml
@@ -11,10 +11,16 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.GivenName)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.GivenName)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.FamilyName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.FamilyName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.StandingsPosition)
