--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     <li><a asp-area="" asp-controller="Races" asp-action="Index">View Races</a></li>
                     <li><a asp-area="" asp-controller="Drivers" asp-action="Index">View Drivers</a></li>
                     <li><a asp-area="" asp-controller="UserPredictions" asp-action="Create">Make Predictions</a></li>
+                    <li><a asp-area="" asp-controller="Tournaments" asp-action="Index">Go To Tournaments</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
