--- a/Views/Drivers/Index.cshtml
+++ b/Views/Drivers/Index.cshtml
@@ -6,54 +6,22 @@
 
 <h2>Index</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.GivenName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FamilyName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StandingsPosition)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Points)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TeamName)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.GivenName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FamilyName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StandingsPosition)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Points)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TeamName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<ol class="list-group ui-widget-content" id="DriverList">
+    @foreach (var item in Model)
+    {
+        <li id="@(@item.Id)" class="list-group-item driverItem">
+            <div class="row">
+                <div class="col-xs-6">
+                    <p><b>@item.StandingsPosition</b> - @item.GivenName @item.FamilyName</p>
+                    </div>
+                <div class="col-xs-3">
+                    <p>@item.TeamName</p>
+                    </div>
+                <div class="col-xs-3">
+                    <p>@item.Points Points</p>
+                </div>  
+            </div>
+        </li>
+    }
+</ol>
+
