--- a/Views/Races/Index.cshtml
+++ b/Views/Races/Index.cshtml
@@ -6,48 +6,25 @@
 
 <h2>Index</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.RaceName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Country)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Date)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Time)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.RaceName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Country)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Time)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<ol class="list-group ui-widget-content" id="RaceList">
+    @foreach (var item in Model)
+    {
+        <li id="@(@item.Id)" class="list-group-item driverItem">
+            <div class="row">
+                <div class="col-xs-6">
+                    <p>@item.RaceName - @item.Country</p>
+                </div>
+                <div class="col-xs-3">
+                    <p>@item.Date</p>
+                </div>
+                <div class="col-xs-3">
+                    <p>@item.Time GMT</p>
+                </div>
+            </div>
+        </li>
+    }
+</ol>
+
+<script>
+    document.querySelector('ol li:nth-child(@ViewBag.Round)').style.backgroundColor = 'red';
+</script>
